<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Toolbar">
    <item
    android:id="@+id/menu_get_photo"
    android:title="@string/photo"
    app:showAsAction="never"/>
    <item
        android:id="@+id/menu_spisok"
        android:title="@string/spisok_klients"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_do_program"
        android:title="@string/program_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_do_menu"
        android:title="@string/menu_menu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_exit"
        android:title="@string/exit_menu"
        app:showAsAction="never" />


</menu>