<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpisokActivity"
    android:background="@drawable/bg_map">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/list_of_klients"
        android:layout_width="316dp"
        android:layout_height="93dp"
        android:layout_below="@id/toSpisokKlientsBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/btn_sp"
        android:text="@string/btn_spisok_klients" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/toNewClientBtn"
        android:layout_width="316dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/btn_new_k"
        android:text="@string/btn_new_klient" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/toRasp"
        android:layout_width="316dp"
        android:layout_height="93dp"
        android:layout_below="@id/list_of_klients"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="572dp"
        android:background="@drawable/btn_rasp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/toSpisokKlientsBtn"
        android:layout_width="316dp"
        android:layout_height="93dp"
        android:layout_below="@id/toNewClientBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/btn_all_k"
        android:text="@string/btn_all_klients" />

</RelativeLayout>