<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation = "10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >
        <!--поле для ввода почты-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"

            android:textSize="20sp"
            app:met_baseColor="#0056d3"
            app:met_errorColor="#ddaa00"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_minCharacters="10"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>
        <!--поле для ввода пароля-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/pass_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black"
            android:textColorHint="@color/text_bottom"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="6"
            app:met_maxCharacters="15">

        </com.rengwuxian.materialedittext.MaterialEditText>
        <!--поле для ввода имени-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="10"
            app:met_maxCharacters="30">

        </com.rengwuxian.materialedittext.MaterialEditText>
        <!--поле для ввода телефона-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_errorColor="#ddaa00"
            app:met_singleLineEllipsis="true"
            app:met_minCharacters="9"
            app:met_maxCharacters="30">

        </com.rengwuxian.materialedittext.MaterialEditText>
    </LinearLayout>
</androidx.cardview.widget.CardView>