<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".CardKlientActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:orientation="vertical">

            <include
                android:id="@+id/klient_card_bar_layout"
                layout="@layout/app_bar_layout">
            </include>
            <!--Данные клиента-->

            <TextView
                android:id="@+id/card_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="Данные клиента"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_items_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="@string/age"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_items_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="@string/weight"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_items_growth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="60dp"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="@string/growth"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_items_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-1dp"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="@string/phone"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!--Показатели-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="Показатели"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_imt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="ИМТ:"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="Индекс тб"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Заметки-->
            <TextView
                android:id="@+id/card_item_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="5sp"
                android:text="Заметки"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_text_klient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Введите..."
                android:inputType="textMultiLine"
                android:paddingStart="5sp"
                android:paddingEnd="5sp"
                android:textColor="#000"
                android:textColorHint="@color/text_bottom"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/background"
                android:text="Сохранить"
                android:textColor="@color/priority" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="end"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnProgram"
                        android:layout_width="49dp"
                        android:layout_height="38dp"
                        android:layout_margin="20sp"
                        android:background="@drawable/program" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnCalc"
                        android:layout_width="52dp"
                        android:layout_height="37dp"
                        android:layout_margin="20sp"
                        android:background="@drawable/calc" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnMenu"
                        android:layout_width="52dp"
                        android:layout_height="37dp"
                        android:layout_margin="20sp"
                        android:background="@drawable/menu_card" />
                </TableRow>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>